tests/errors/lifetime/loan/access_to_parent_of_borrowed_field_conflicts.sim

        struct P: Copy + Drop { a: i64 b: i64 }
        extern fn sink(r: &mut i64);
        extern fn takep(p: P);
        fn f(p: P) {
          r: &mut i64;
          entry:
            r = &mut p.a;
            call takep(move p);
            call sink(move r);
            return
        }
        