tests/errors/lifetime/loan/access_to_parent_of_borrowed_field_conflicts.err.expected
error: at 9:13: [LT-LoanConflict] In function 'f', block 'entry': cannot move from 'p': already borrowed by 'r'
   |
 9 |             call takep(move p);
   |             ^^^^^^^^^^^^^^^^^^
  = note: borrow of 'p' occurs here
   |
 8 |             r = &mut p.a;
   |             ^^^^^^^^^^^^
  hint: the borrow of 'r' is active until its last use or explicit unborrow.
